--- a/index.html
+++ b/index.html
@@ -41,37 +41,87 @@
                 Experience the rich, buttery goodness of authentic Filipino polvoron, handcrafted with love and
                 tradition. Perfectly crumbly, irresistibly sweet, and made from the finest ingredients, our polvoron
                 brings the taste of home to every occasion.</h3>
-            <a href="" class="button">Learn More</a>
+            <a href="#" class="button">Learn More</a>
         </div>
     </div>
 
-    <div class="container3">
+    <div class="container3" id="flavors">
         <div class="content">
             <h3>Pinoy Flavors</h3>
             <h4>Choose your favorite classic Polvoron Flavor</h4>
 
-            <div class="cards" id="flavors">
+            <div class="cards" >
                 <div class="card">
-                <img src="" alt="">
-                <div class="name">Classic Polvoron</div>
-                <i class="fa-solid fa-angle-down"></i>
+                    <img src="" alt="">
+                    <div class="name">Classic Polvoron</div>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="name">Ube Polvoron</div>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="name">Tsokolate Polvoron</div>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
             </div>
-            <div class="card">
-                <img src="" alt="">
-                <div class="name">Ube Polvoron</div>
-                <i class="fa-solid fa-angle-down"></i>
-            </div>
-            <div class="card">
-                <img src="" alt="">
-                <div class="name">Tsokolate Polvoron</div>
-                <i class="fa-solid fa-angle-down"></i>
+
+            <a href="#footer" class="button">Order Now</a>
+        </div>
+    </div>
+
+    <div class="container4">
+        <div class="content">
+            <h3>Testimonials</h3>
+            <div class="reviews">
+                <div class="review">
+                    <img src="" alt="">
+                    <h4>John Doe</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
+                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
+                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+                <div class="review">
+                    <img src="" alt="">
+                    <h4>John Doe</h4>
+                    <p>Lor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
+                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
+                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+                <div class="review">
+                    <img src="" alt="">
+                    <h4>John Doe</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
+                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
+                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
-    </div>
-
-    <div class="footer"></div>
+    <div class="footer" id="footer"></div>
 </body>
 
 </html>
