--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h3>Pinoy Flavors</h3>
             <h4>Choose your favorite classic Polvoron Flavor</h4>
 
-            <div class="cards" >
+            <div class="cards">
                 <div class="card">
                     <img src="" alt="">
                     <div class="name">Classic Polvoron</div>
@@ -78,44 +78,42 @@
             <div class="reviews">
                 <div class="review">
                     <img src="" alt="">
-                    <h4>John Doe</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
-                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
-                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <h4>Maria A.</h4>
+                    <p>"The Pinoy Polvoron brings me back to my childhood with its rich, creamy, and perfectly crumbly
+                        texture. It melts in your mouth with every bite, leaving a delicious sweetness that's just
+                        right. It's a perfect treat to share with family and friends!"</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
                 <div class="review">
                     <img src="" alt="">
-                    <h4>John Doe</h4>
-                    <p>Lor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
-                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
-                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <h4>John R.</h4>
+                    <p>"I've tried many polvoron brands, but this one stands out! The authentic Pinoy flavor combined
+                        with its melt-in-your-mouth goodness makes it an irresistible snack. It's great for pasalubong
+                        and for satisfying cravings."</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
                     </div>
                 </div>
                 <div class="review">
                     <img src="" alt="">
-                    <h4>John Doe</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ipsum laudantium non enim,
-                        possimus architecto alias officia cupiditate, distinctio quidem deleniti doloremque! Vitae
-                        aliquam, quos nihil sequi saepe doloremque ipsa.</p>
+                    <h4>Shelloy Sheesh </h4>
+                    <p>"What I love most about this polvoron is the perfect balance of flavors—it’s not too sweet, and the texture is just right. It’s a delightful treat that feels homemade and full of love. Highly recommended!"</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star checked"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star "></i>
                     </div>
                 </div>
             </div>
