--- a/index.html
+++ b/index.html
@@ -77,46 +77,55 @@
             <h3>Testimonials</h3>
             <div class="reviews">
                 <div class="review">
-                    <img src="" alt="">
-                    <h4>Maria A.</h4>
+                    <img src="./testimony1.jpg" alt="">
+                    <h4>Maris Racal</h4>
                     <p>"The Pinoy Polvoron brings me back to my childhood with its rich, creamy, and perfectly crumbly
                         texture. It melts in your mouth with every bite, leaving a delicious sweetness that's just
                         right. It's a perfect treat to share with family and friends!"</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
                 <div class="review">
-                    <img src="" alt="">
-                    <h4>John R.</h4>
+                    <img src="./testimony2.jpg" alt="">
+                    <h4>Anthony Jennings</h4>
                     <p>"I've tried many polvoron brands, but this one stands out! The authentic Pinoy flavor combined
                         with its melt-in-your-mouth goodness makes it an irresistible snack. It's great for pasalubong
                         and for satisfying cravings."</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
                 <div class="review">
-                    <img src="" alt="">
-                    <h4>Shelloy Sheesh </h4>
-                    <p>"What I love most about this polvoron is the perfect balance of flavors—it’s not too sweet, and the texture is just right. It’s a delightful treat that feels homemade and full of love. Highly recommended!"</p>
+                    <img src="./testimony3.jpg" alt="">
+                    <h4>Jamela Villanueva</h4>
+                    <p>"What I love most about this polvoron is the perfect balance of flavors—it's not too sweet, and
+                        the texture is just right. It's a delightful treat that feels homemade and full of love. Highly
+                        recommended!"</p>
                     <div class="stars">
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
-                        <i class="fa-solid fa-star "></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="container5">
+        <div class="img"></div>
+        <div class="content">
+            
         </div>
     </div>
     <div class="footer" id="footer"></div>
