--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 
             <div class="cards">
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./classic.jpg" alt="">
                     <div class="name">Classic Polvoron</div>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./ube.jpg" alt="">
                     <div class="name">Ube Polvoron</div>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <div class="name">Tsokolate Polvoron</div>
+                    <img src="./peanut.jpg" alt="">
+                    <div class="name">Mani Polvoron</div>
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
@@ -123,12 +123,32 @@
     </div>
 
     <div class="container5">
-        <div class="img"></div>
+        <div class="img">
+            <!-- <img src="./polvo.png" alt=""> -->
+        </div>
+        
         <div class="content">
+            <h3>Contact for inquiries!</h3>
+            <div id="contacts">
+                <h5>(+63)95 123 6789</h5>
+                <h5>(+63)91 456 0987</h5>
+            </div>
+
+            <h3>Follow Us</h3>
+            \
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            </div>
             
         </div>
     </div>
-    <div class="footer" id="footer"></div>
+    <div class="footer" id="footer">
+        <a href="#">Terms and Conditions</a>
+        <span> &copy; Copyright 2024</span>
+    </div>
 </body>
 
 </html>
